# ost-pid

./: .gitmodules  README.md  ost-pid.yaml
docs/: README.md
firmware/: justfile
firmware/esp32/: Cargo.toml  justfile
firmware/esp32s3/: Cargo.toml
firmware/shared/: Cargo.toml  justfile
firmware/shared/src/: builders.rs  constant.rs  displays.rs  driver.rs  drivers.rs  error.rs  input.rs  inputs.rs  lib.rs  models.rs  processor.rs  sampler.rs  samplers.rs  singletons.rs  task_trait.rs  tasks.rs  ui.rs
firmware/shared/src/builders/: app_builder.rs  app_trait.rs  pid_builder.rs
firmware/shared/src/displays/: color_lcd_display.rs  console_ui.rs  display_trait.rs  monochrome_lcd_dispay.rs
firmware/shared/src/drivers/: driver_trait.rs  mock_console_driver.rs  ssr_driver.rs
firmware/shared/src/inputs/: encoder_as_2_button_input.rs  input_trait.rs  push_button_input.rs
firmware/shared/src/models/: screen_model.rs  ui_state_model.rs
firmware/shared/src/samplers/: max31865_sampler.rs  mock_sampler.rs  sampler_trait.rs
firmware/shared/src/singletons/: global_state_singleton.rs  input_watcher_singleton.rs  sampler_singleton.rs  sampler_watcher_singleton.rs  setpoint_watcher_singleton.rs
firmware/shared/src/tasks/: max31865_sampler_task.rs  mock_sampler_task.rs  ssr_driver_task.rs  task_trait.rs  ui_state_task.rs
firmware/shared/src/ui/: color_lcd_display.rs  console_ui.rs  display_trait.rs  lcd_display.rs  monochrome_lcd_dispay.rs  ui_trait.rs
firmware/v1/: .gitignore  Makefile  README.md  compile_commands.json
hardware/Ost-PID_MainBoard/: Ost-PID_MainBoard.kicad_pro  Ost-PID_MainBoard.kicad_sch  SW_WithLP.kicad_sch
hardware/mainBoard/: Ost-PID_MainBoard.kicad_prl  Ost-PID_MainBoard.kicad_pro
hardware/proto1/: fp-info-cache  fp-lib-table  ost-pid-proto1.kicad_prl  ost-pid-proto1.kicad_pro  ost-pid-proto1.kicad_sch  sym-lib-table
hardware/proto1/libraries/footprints/esp32-s3-tempel-lib.pretty/: esp32-s3-tempel.kicad_mod
hardware/proto1/libraries/symbols/: esp32-s3-tempel-lib.kicad_sym
