[package]
edition      = "2024"
name         = "frr_esp32"
rust-version = "1.88"
version      = "0.1.0"

# [[bin]]
# name = "esp32"
# path = "./src/bin/main.rs"

[dependencies]
defmt                   = "1.0.1"
critical-section        = "1.2.0"
esp-hal                 = { version = "~1.0", features = ["defmt","esp32", "unstable"] }
esp-bootloader-esp-idf  = { version = "0.4.0", features = ["defmt", "esp32"] }
esp-alloc               = { version = "0.9.0", features = ["defmt"] }
esp-backtrace           = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-println             = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
heapless = { version = "0.9.2", features = ["defmt"] }
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
esp-rtos = { version = "0.2.0", features = ["esp32", "embassy", "defmt"]}
frr_shared = { path = "../shared" }
mipidsi = "0.9.0"
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
static_cell = "2.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
