[package]
edition      = "2024"
name         = "frr_esp32s3"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32s3"
path = "./src/bin/main.rs"

[dependencies]
embassy-executor = "0.9.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
critical-section = "1.2.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32s3"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
static_cell = "2.1.1"
heapless = { version = "0.9.2", features = ["defmt"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
