[package]
name = "frr_shared"
version = "0.1.0"
edition = "2024"

[features]
default = []

std = [
  "dep:chrono", 
  "dep:embedded-graphics-simulator", 
  "dep:eg-seven-segment",
  "dep:embedded-layout"
]

[dependencies]
# optional 
chrono = { version = "0.4.43", optional = true }
eg-seven-segment = { version = "0.2.0", optional = true }
embedded-graphics-simulator = { version = "0.8.0", optional = true }

# main deps 
defmt = "1.0.1"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = { version = "0.9.2" }
max31865  = { path = "../rdc/max31865" }
num-traits = {version = "0.2.19", default-features = false}
pid = "4.0.0"
embedded-layout = { version = "0.4.2", optional = true }
